--- a/source/client/src/components/Sidebar/Sidebar.css
+++ b/source/client/src/components/Sidebar/Sidebar.css
@@ -33,7 +33,8 @@
   flex-direction: column;
   gap: 1rem;
 }
-.circle-bg {
+.circle-bg,
+.circle-bg-bottom {
   border-radius: 50%;
   background-color: var(--primary-btn);
   height: 26px;
@@ -42,6 +43,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.circle-bg-bottom {
+  font-size: 14px;
+  height: 20px;
+  width: 20px;
 }
 
 .sidebar-bottom.open,
