--- a/source/client/src/components/Sidebar/Sidebar.css
+++ b/source/client/src/components/Sidebar/Sidebar.css
@@ -10,12 +10,11 @@
   padding-bottom: calc(var(--header-height) + 1rem);
 }
 
-.sidebar > .sidebar-profile > img {
+.sidebar .sidebar-profile > img {
   transform: scaleX(-1);
-  transition: trasnform 0.3s ease;
 }
 
-.sidebar.open > .sidebar-profile > img {
+.sidebar.open .sidebar-profile > img {
   transform: scaleX(1);
 }
 
@@ -78,6 +77,7 @@
   display: flex;
   align-items: center;
   gap: 1rem;
+  cursor: pointer;
 }
 
 .profile-cont > img {
