--- a/source/client/src/index.css
+++ b/source/client/src/index.css
@@ -17,6 +17,7 @@
   box-sizing: border-box;
   font-family: "Inter";
   font-style: normal;
+  transition: all 0.3s ease;
 }
 
 html,
@@ -74,6 +75,8 @@ p {
 .section-header {
   padding: 1rem 1rem 0.3rem 3rem;
   border-bottom: var(--dark-grey) solid 3px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .section-content {
