--- a/source/client/src/components/TodoCard/TodoCard.css
+++ b/source/client/src/components/TodoCard/TodoCard.css
@@ -12,7 +12,10 @@
   align-items: center;
 }
 
-.todo-card h3 {
+.todo-card h3,
+.todo-card input,
+.todo-card textarea {
+  background: #191b20;
   font-family: "Poppins";
   font-size: 18px;
   font-weight: 700;
@@ -21,6 +24,12 @@
   text-align: left;
   color: var(--primary-grey);
 }
+.todo-card textarea {
+  font-size: 16px;
+  resize: none;
+  overflow: hidden;
+}
+
 .todo-card img {
   height: 24px;
   width: 24px;
