--- a/source/client/src/components/CreateTodoList/CreateTodoList.css
+++ b/source/client/src/components/CreateTodoList/CreateTodoList.css
@@ -14,7 +14,7 @@
 .create-todo-list-cont input,
 .create-todo-list-cont input:focus {
   padding: 16px;
-  width: 100%;
+  max-width: 100%;
   background: #242731;
   border: none;
   color: #a6a6a6;
