--- a/source/client/src/components/TodoCard/TodoCard.css
+++ b/source/client/src/components/TodoCard/TodoCard.css
@@ -10,6 +10,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  max-width: 100%;
 }
 
 .todo-card h3,
@@ -23,10 +24,13 @@
   letter-spacing: 0px;
   text-align: left;
   color: var(--primary-grey);
+  max-width: 100%;
 }
+
 .todo-card textarea {
   font-size: 16px;
-  resize: none;
+  /* resize: none; */
+  max-width: 100%;
   overflow: hidden;
 }
 
@@ -39,4 +43,5 @@
   display: flex;
   align-items: center;
   gap: 1rem;
+  max-width: 100%;
 }
