--- a/source/client/src/components/TodoList/TodoList.css
+++ b/source/client/src/components/TodoList/TodoList.css
@@ -4,6 +4,53 @@
   gap: 1rem;
 }
 
+.todo-card-create,
+.todo-card-create input,
+.todo-card-create textarea {
+  padding: 8px;
+  background: #191b20;
+  font-family: "Poppins";
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: var(--primary-grey);
+  width: 100%;
+  max-width: 100%;
+  border-radius: 16px;
+}
+
+.todo-card-create {
+  padding: 16px;
+  display: flex;
+  gap: 1rem;
+  flex-direction: column;
+}
+
+.todo-card-create textarea {
+  font-size: 14px;
+}
+
+.todo-card-create input {
+  max-width: calc(100% - 16px);
+}
+
+.todo-header-create {
+  display: flex;
+  align-items: center;
+  position: relative;
+  justify-content: space-between;
+}
+
+.add-img {
+  height: 30px;
+  width: 30px;
+  position: absolute;
+  right: 0px;
+  top: calc(50% - 15px);
+}
+
 .todo-list-name {
   padding: 16px;
   width: 100%;
