--- a/source/client/src/index.css
+++ b/source/client/src/index.css
@@ -116,9 +116,10 @@ textarea {
 }
 
 .filter-dark {
+  filter: none;
 }
 
 .filter-white {
-  filter: invert(48%) sepia(79%) saturate(2476%) hue-rotate(86deg)
-    brightness(118%) contrast(119%);
+  filter: brightness(0%) saturate(100%) hue-rotate(0deg) grayscale(100%)
+    contrast(1000%);
 }
