--- a/source/client/src/index.css
+++ b/source/client/src/index.css
@@ -59,6 +59,11 @@ p {
   color: var(--primary-grey);
 }
 
+a {
+  text-decoration: none;
+  color: var(--primary-color);
+}
+
 input,
 textarea {
   outline: none;
