--- a/source/client/src/components/Sidebar/Sidebar.css
+++ b/source/client/src/components/Sidebar/Sidebar.css
@@ -45,9 +45,13 @@
 }
 
 .circle-bg-bottom {
+  border-radius: 5px;
   font-size: 14px;
   height: 20px;
-  width: 20px;
+  padding: 2px 4px;
+  min-width: 20px;
+  width: fit-content;
+  /* width: 20px; */
 }
 
 .sidebar-bottom.open,
