--- a/source/client/src/index.css
+++ b/source/client/src/index.css
@@ -27,6 +27,19 @@ body {
   color: var(--primary-color);
 }
 
+/* ::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 4px;
+} */
+
 h1 {
   font-family: "Poppins", sans-serif;
   font-size: 24px;
