--- a/source/client/src/pages/Home/Home.css
+++ b/source/client/src/pages/Home/Home.css
@@ -12,6 +12,8 @@
 
 .home-right {
   display: flex;
+  flex-direction: column;
+  gap: 1rem;
   align-self: center;
   justify-content: center;
   width: 40%;
